--- a/package.json
+++ b/package.json
@@ -5,14 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:w": "webpack --watch",
-    "webpack": "webpack"
+    "build:dev:w": "webpack --config ./webpack.config.development.js --watch",
+    "build:prod:w": "webpack --config ./webpack.config.production.js --watch",
+    "build:dev": "webpack --config ./webpack.config.development.js",
+    "build:prod": "webpack --config ./webpack.config.production.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.18.2",
+    "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8"
+  },
+  "dependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   }
 }
