--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:dev:w": "webpack --config ./webpack.config.development.js --watch",
+    "build:dev:w": "webpack --config ./webpack.config.development.js --watch --mode development",
     "build:prod:w": "webpack --config ./webpack.config.production.js --watch",
-    "build:dev": "webpack --config ./webpack.config.development.js",
+    "build:dev": "webpack --config ./webpack.config.development.js --mode development",
     "build:prod": "webpack --config ./webpack.config.production.js"
   },
   "keywords": [],
@@ -24,7 +24,8 @@
     "prettier": "^1.18.2",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.8"
+    "webpack-cli": "^3.3.8",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
